--- a/.htaccess
+++ b/.htaccess
@@ -2,18 +2,18 @@ RewriteEngine on
 
 # www rewrite
 RewriteCond %{HTTP_HOST} ^www\.(.*) [NC]
-RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
 
-RewriteRule ^index\.html$ https://pizzamia.ua/ [R=301,L]
+RewriteRule ^index\.html$ http://pizza/ [R=301,L]
 
 # prevent directory listings
 Options -Indexes
 IndexIgnore */*
 
-RewriteCond %{HTTPS} off 
-RewriteCond %{HTTP:X-Forwarded-Proto} !https 
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+#RewriteCond %{HTTPS} off 
+#RewriteCond %{HTTP:X-Forwarded-Proto} !https 
+#RewriteRule ^(.*)$ http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 # follow symbolic links
 Options FollowSymlinks
